remove delete unnecessary project

--- a/NotificationCenter.Api/appsettings.json
+++ b/NotificationCenter.Api/appsettings.json
@@ -8,10 +8,10 @@
   },
   "AllowedHosts": "*",
   "Database": {
-    "ConnectionString": "Server=.;Initial Catalog=demo;User Id=sa;Password=123789258qQ!; MultipleActiveResultSets=True;"
+    "ConnectionString": "Server=.;Initial Catalog=demo;User Id=sa;Password=XXXXX; MultipleActiveResultSets=True;"
  },
   "Reports": {
-    "Directory": "C:\\Users\\Admin\\Documents\\lectures\\options\\files\\14-notifications",
+    "Directory": "C:\\Users\\Admin\\Documents",
     "TimerInterval": 10000
   }
 }
